XMLtoCSV/objects/unpackaged/objects/Consent_Header_vod__c.object
<CustomObject>
    <description>Consent Header defines the country and the language for which the consent capture functionality is available for</description>
    <fields>
        <fullName>Approved_Email_Consent_Level_vod__c</fullName>
        <description>Picklist value that defines the level of consent for Approved Email when capturing and determining consent.</description>
        <label>Approved Email Consent Level</label>
        <picklist>
            <picklistValues>
                <fullName>Product_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content_Type_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consent_Header_Help_Text_vod__c</fullName>
        <description>Field where content admin can add text that helps User better understand how to use consent capture page.</description>
        <label>Consent Header Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The country for which the consent header is applicable.</description>
        <label>Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipLabel>Consent Headers</relationshipLabel>
        <relationshipName>Consent_Header_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactive_Datetime_vod__c</fullName>
        <description>The datetime whenever the status is changed to Inactive_vod.</description>
        <label>Inactive Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>ar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nl_NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>el</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signature_Required_On_Opt_Out_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag used to determine if Signature/ Paper Consent ID is required if only opt outs are being captured</description>
        <label>Signature Required On Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>The status of the consent header.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Staged_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Consent Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Country_vod__c</columns>
        <columns>Language_vod__c</columns>
        <columns>Status_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consent Headers</pluralLabel>
    <recordTypes>
        <fullName>Consent_Header_Default_vod</fullName>
        <active>true</active>
        <description>Default recordtype for Consent_Header_vod object.</description>
        <label>Consent_Header_Default_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>